styling:fixed layout issue of container

--- a/src/pages/hashtags/hashtags.module.css
+++ b/src/pages/hashtags/hashtags.module.css
@@ -1,4 +1,6 @@
 .container{
+    width: 80%;
+    margin: 0 auto;
     padding: 1rem;
     height: 100vh;
     overflow-y: scroll;
